[package]
name = "susy-sentinel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.62"
solana-account-decoder = "=1.6.7"
solana-clap-utils = "=1.6.7"
solana-cli-config = "=1.6.7"
solana-cli-output = "=1.6.7"
solana-client = "=1.6.7"
solana-logger = "=1.6.7"
solana-remote-wallet = "=1.6.7"
solana-sdk = "=1.6.7"

[[bin]]
name = "susy-sentinel"
path = "src/main.rs"
