[package]
name = "susy-sentinel"
version = "0.1.0"
edition = "2018"
authors = ["Shamil Khalilov <shamfama@gmail.com>"]
repository = "https://github.com/SuSy-One/susy-sentinel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.14.0"
# actix-web = "3.3.2"
bs58 = "0.4.0"
serde = "1.0"
serde_json = "1.0"
arrayref = "0.3.6"
solana-account-decoder = "=1.6.9"
solana-clap-utils = "=1.6.9"
solana-cli-config = "=1.6.9"
solana-cli-output = "=1.6.9"
solana-client = "=1.6.9"
solana-logger = "=1.6.9"
solana-remote-wallet = "=1.6.9"
solana-sdk = "=1.6.9"
solana-ibport-contract = { git = "https://github.com/SuSy-One/solana-adapter", features = ["no-entrypoint"] }


[[bin]]
name = "susy-sentinel"
path = "src/main.rs"
